--- a/style.css
+++ b/style.css
@@ -137,19 +137,19 @@ body {
     cursor: pointer;
     border: none;
     padding: 0 40px;
-    margin: 15px 0 10px 0;
+    margin: 15px 0 10px 10px;
     height: 45px;
     border-radius: 7px;
     background-color: darkgrey;
     font-weight: 400;
     font-size: 16px;
     box-shadow: 0 4px 8px 0 grey;
+    transition: transform 0.5s ease;
 }
 
 .btn-project:hover {
     transform: scale(1.1); 
     background-color: grey; 
-    margin-left: 10px;
 }
 
 .btn-project a {
